...

      {/* Title */}
      <h1
        className="text-center font-normal text-md leading-6 text-white"
        style={{ fontFamily: "'Race Sport', sans-serif" }}
      >
        PLAY URC FANTASY
        <br />
        {/* {abbreviateSeasonName(season.name).toUpperCase()} CHALLENGE */}
      </h1>
    </Fragment>
  )
}
...

      {/* Manage Team Button */}
      <button
        onClick={handleManageTeam}
        className="px-6 py-2.5 rounded-md bg-[#011E5C]/20 border border-white font-semibold text-sm text-white uppercase shadow-md transition-colors hover:bg-[#011E5C]/30"
      >
        PLAY NOW
      </button>
    </Fragment>
  )
}
