...
            disbabled={isLoading}
            isLoading={isLoading}
            onClick={checkPasswordStatus}
            className="py-3"
            type="submit"
          >
            Continue with Email
          </PrimaryButton>
        )}

        {hasPassword && (
          <PrimaryButton
            disbabled={isLoading}
            isLoading={isLoading}
            onClick={handleLogin}
            className="py-3"
            type="submit"
          >
            Sign In
          </PrimaryButton>
        )}

        <ErrorCard 
          hideIfNoMessage
          message={message}
...
