...
        </WarningCard>
      )}

      <Activity mode={(hideControls) ? "hidden" : "visible"} >

        <div className="mt-3" >
          <p>Quick Actions</p>
        </div>

        <div className={twMerge(
          "flex flex-row items-center justify-center gap-2",
          isSlotLocked && "opacity-60"
        )} >
...
